[package]
name = "embassy-async"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt = "1.0"
defmt-rtt = "1.0"
embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-futures = { version = "0.1", features = ["defmt"] }
embassy-rp = { version = "0.8", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-sync = { version = "0.7", features = ["defmt"] }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }
futures = { version = "0.3", default-features = false, features = ["async-await"] }
panic-probe = { version = "1.0", features = ["print-defmt"] }

[[bin]]
name = "custom-async"
path = "src/main.rs"
test = false
bench = false
